2005-11-30  Jackson Harper  <jackson@ximian.com>

	* Menu.cs: Switch the MenuChanged method to OnMenuChanged and add
	a MenuChanged event. Just to make the API a little more
	consistent.
	* MainMenu.cs:
	* MenuItem.cs: Use the new OnMenuChanged
	* MdiChildContext.cs: Handle menu merging.
	* Form.cs: Implement MergedMenu.
	
2005-11-30  Jackson Harper  <jackson@ximian.com>

	* Menu.cs: We were misusing Add. Add goes behind the specified
	index according to the docs, and does not replace the specified
	index. So I added an Insert method.

2005-11-30  Peter Dennis Bartok  <pbartok@novell.com>

	* TextBoxBase.cs:  Implemented Ctrl-Ins (Copy), Shift-Ins (Paste) and
	  Shift-Del (Cut), apparently Emacs uses these old Win 2.x keys. This
	  is for Jackson
	* RichTextBox.cs: Added calls to base for DnD events

2005-11-28  Peter Dennis Bartok  <pbartok@novell.com>

	* TextControl.cs:
	  - Fixed drag-selection related crash; style fixes
	  - Implemented undo class
	    o Implemented method to capture document state for specified
	      range in document tree
	    o Implemented method to restore captured document state
	    o Implemented cursor tracking
	    o Implemented basic undo stack
	  - Added undo cursor tracking to methods altering cursor location
	  - Added undo tracking to selection deletion (still missing
	    other text-altering hookups)
	* RichTextBox.cs:
	  - Added SelectionLength property
	  - Implemented CanPaste()
	  - Implemented Paste()
	  - Added missing protected methods
	  - Fixed RTF->Document conversion; now uses font index 0 and color 
	    index 0 as the default font for the parsed text
	  - Fixed RTF<->Document font size translation
	  - Fixed RTF generation, now properly handles cross-tag boundaries
	    for single line selection
	  - No longer always appends blank line to generated RTF
	  - Removed TODOs
	  - Added missing attributes
	  - Hooked up undo-related methods
	* TextBoxBase.cs:
	  - Implemented Copy()
	  - Implemented Paste()